--- a/pricing.html
+++ b/pricing.html
@@ -16,7 +16,7 @@
     <div class="card">
     <div class="box box1">
         <h3>FREE</h3>
-        <h4><sup>$</sup><strong>0</strong>/mo</h4>
+        <h4><sup><i class="fa-solid fa-indian-rupee-sign"></i></sup><strong>0</strong>/mo</h4>
         <p class="price-info">GREAT FOR STARTERS</p>
         <p class="main-text">Discover ho to create your first project</p>
         <a href="#" class="btn btn1">Get Started</a>
@@ -32,7 +32,7 @@
     
         <div class="box box2">
             <h3>PRO</h3>
-            <h4><sup>$</sup><strong>7</strong>/mo</h4>
+            <h4><sup><i class="fa-solid fa-indian-rupee-sign"></i></sup><strong>699</strong>/mo</h4>
             <p class="price-info">FOR PLANNED PROJECTS</p>
             <p class="main-text">Bring your desire to next level and export them</p>
             <a href="#" class="btn btn2">Get Started</a>
@@ -48,7 +48,7 @@
         
             <div class="box box3">
                 <h3>INTERPRISE</h3>
-                <h4><sup>$</sup><strong>12</strong>/mo</h4>
+                <h4><sup><i class="fa-solid fa-indian-rupee-sign"></i></sup><strong>999</strong>/mo</h4>
                 <p class="price-info">FOR PROFESSIONAL USE</p>
                 <p class="main-text">Enjoy limitless use with interactive export options</p>
                 <a href="#" class="btn btn3">Get Started</a>
